test3-2022-12-05.log
regress/test3.fir:166372:5: error: firrtl.constant attribute has wrong sign
    wire _tmp3120: UInt<15>
    ^
regress/test3.fir:166372:5: note: see current operation: %8 = "firrtl.constant"() {value = -12133 : si15} : () -> !firrtl.uint<15>
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 27.2688 seconds

  ----User Time----  ----Wall Time----  ----Name----
    4.3053 (  8.8%)    4.3053 ( 15.8%)  FIR Parser
    0.0000 (  0.0%)    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    0.0000 (  0.0%)    Parse OMIR
    3.3556 (  6.9%)    3.3556 ( 12.3%)    Parse modules
    0.9009 (  1.8%)    0.9009 (  3.3%)    Verify circuit
   44.3378 ( 90.7%)   22.7090 ( 83.3%)  'firrtl.circuit' Pipeline
    0.8693 (  1.8%)    0.8693 (  3.2%)    LowerFIRRTLAnnotations
    4.3963 (  9.0%)    2.3933 (  8.8%)    'firrtl.module' Pipeline
    1.3311 (  2.7%)    0.7475 (  2.7%)      DropName
    3.0651 (  6.3%)    1.6458 (  6.0%)      CSE
    0.0000 (  0.0%)    0.0000 (  0.0%)        (A) DominanceInfo
    0.0000 (  0.0%)    0.0000 (  0.0%)    InjectDUTHierarchy
    0.1545 (  0.3%)    0.0846 (  0.3%)    'firrtl.module' Pipeline
    0.1544 (  0.3%)    0.0846 (  0.3%)      LowerCHIRRTLPass
    0.2840 (  0.6%)    0.2840 (  1.0%)    InferWidths
    0.8657 (  1.8%)    0.8657 (  3.2%)    MemToRegOfVec
    1.4550 (  3.0%)    1.4550 (  5.3%)    InferResets
    0.1640 (  0.3%)    0.1640 (  0.6%)      (A) circt::firrtl::InstanceGraph
    0.2531 (  0.5%)    0.2531 (  0.9%)    WireDFT
    1.2900 (  2.6%)    0.7181 (  2.6%)    'firrtl.module' Pipeline
    1.2900 (  2.6%)    0.7181 (  2.6%)      FlattenMemory
    1.4160 (  2.9%)    1.4160 (  5.2%)    LowerFIRRTLTypes
    5.9358 ( 12.1%)    3.2412 ( 11.9%)    'firrtl.module' Pipeline
    4.5503 (  9.3%)    2.4402 (  8.9%)      ExpandWhens
    1.3842 (  2.8%)    0.8006 (  2.9%)      SFCCompat
    1.9450 (  4.0%)    1.9450 (  7.1%)    Inliner
    1.5801 (  3.2%)    0.8500 (  3.1%)    'firrtl.module' Pipeline
    1.5801 (  3.2%)    0.8500 (  3.1%)      RandomizeRegisterInit
    1.3265 (  2.7%)    1.3265 (  4.9%)    CheckCombCycles
    0.3014 (  0.6%)    0.3014 (  1.1%)      (A) circt::firrtl::InstanceGraph
    8.2722 ( 16.9%)    4.5788 ( 16.8%)    'firrtl.module' Pipeline
    7.9356 ( 16.2%)    4.3925 ( 16.1%)      Canonicalizer
    0.3365 (  0.7%)    0.1863 (  0.7%)      InferReadWrite
    0.1589 (  0.3%)    0.1589 (  0.6%)    PrefixModules
    0.0659 (  0.1%)    0.0659 (  0.2%)      (A) circt::firrtl::InstanceGraph
    0.0000 (  0.0%)    0.0000 (  0.0%)      (A) circt::firrtl::NLATable
    0.5573 (  1.1%)    0.5573 (  2.0%)    IMConstProp
    0.2545 (  0.5%)    0.2545 (  0.9%)  Rest
   48.8976 (100.0%)   27.2688 (100.0%)  Total

{
  totalTime: 27.314,
  maxMemory: 1062457344
}
